# hello-python-packaging

./: .codeclimate.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .terraformrc  AUTHORS  CHANGELOG.md  ChangeLog  Makefile  README.md  codecov.yml  pyproject.toml  requirements.ci.txt  requirements.dev.txt  requirements.txt  scratch.md  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: CommentPR.yml  ReceivePR.yml  codecov.yml  forked-pr_solution3_label-condition.yml  forked-pr_solution4_env-protection-rule.yml  lint.yaml  merge-main.yml  part1-pr-receive.yml  part2-pr-comment.yml  pull-request.yml  pytest.yaml  release-force-bump-major.yaml  release-force-bump-minor.yaml  release-force-bump-patch.yaml  release.yaml  security.yaml  semantic-release.yaml  semgrep.yml  splitflow-part1-pr-receive.yml  splitflow-part2-pr-comment.yml  test.yaml
.github/workflows/disabled/: security.yaml  splitflow-b-part1-pull-request-target.yml  splitflow-part1-pr-receive.yml  splitflow-part2-pr-comment.yml
docs/: coverage_pytest-cov.md  external-pr_github-actions.md  lint_black.md  precommit_pre-commit.md  release_pypi-standard.md  secrets_detect-secrets.md  testing_pytest.md  try-commitizen.md  try-pbr.md  try-python-semantic-release.md  try-versioneer.md  versioning_python-semantic-release.md
hello_pp/: __version__.py  cli.py  fork_fails.py  forked_code.py  has_secrets.py  linting_scratch.py  should_fail.py  untested.py
hello_pypi/: __version__.py  cli.py
tests/: test_cli.py  test_sample.py
