[metadata]
name = js-hello-pypi
version = attr: hello_pypi.__version__
author = Bobby Tables
author_email = bobby@tables.test
description = Exploring PyPI CLI tool packaging
# Pull long description from the README file.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SafeEval/hello-pypi
project_urls =
    Bug Tracker = https://github.com/SafeEval/hello-pypi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.8


[options.entry_points]
console_scripts =
    hello-pypi = hello_pypi.cli:main
