[metadata]
name = hello-python-packaging
version = attr: hello_pp.__version__
author = Bobby Tables
author_email = bobby@tables.test
description = Exploring Python package pipelines, builds, releases, etc
# Pull long description from the README file.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SafeEval/hello-python-packaging
project_urls =
    Bug Tracker = https://github.com/SafeEval/hello-python-packaging/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.8


[options.entry_points]
console_scripts =
    hello-pp = hello_pp.cli:main


[semantic_release]
hvcs = github
branch = main
version_variable = hello_pp/__version__.py:__version__

# `publish` releases to PyPI?
upload_to_pypi = true

# Use the test PyPI index
repository = testpypi

# Github Releases
upload_to_release = true
